test/kubernetes/e2e/features/aiextension/testdata/prompt-guard-webhook-streaming.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: RoutePolicy
metadata:
  name: azure-openai-opt
  namespace: ai-test
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: azure-openai
  ai:
    promptGuard:
      request:
        webhook:
          host: 172.17.0.1
          port: 7891
      response:
        webhook:
          host: 172.17.0.1
          port: 7891
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: RoutePolicy
metadata:
  name: openai-opt
  namespace: ai-test
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: openai
  ai:
    promptGuard:
      response:
        webhook:
          host: 172.17.0.1
          port: 7891
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: RoutePolicy
metadata:
  name: gemini-opt
  namespace: ai-test
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: gemini
  ai:
    promptGuard:
      response:
        webhook:
          host: 172.17.0.1
          port: 7891
    routeType: CHAT_STREAMING
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: RoutePolicy
metadata:
  name: vertex-ai-opt
  namespace: ai-test
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: vertex-ai
  ai:
    promptGuard:
      response:
        webhook:
          host: 172.17.0.1
          port: 7891
    routeType: CHAT_STREAMING
