test/kubernetes/e2e/features/aiextension/testdata/streaming.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: RoutePolicy
metadata:
  name: gemini-policy
  namespace: ai-test
spec:
  ai:
    routeType: CHAT_STREAMING
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: RoutePolicy
metadata:
  name: vertex-ai-policy
  namespace: ai-test
spec:
  ai:
    routeType: CHAT_STREAMING
