test/kubernetes/e2e/features/aiextension/testdata/tracing-policy.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: HTTPListenerPolicy
metadata:
  name: tracing-policy
  namespace: ai-test
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ai-gateway
  tracing:
    provider:
      openTelemetry:
        serviceName: http
        grpcService:
          backendRef:
            name: otel-collector
            namespace: ai-test
            port: 4317
    spawnUpstreamSpan: true
